--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
-    "mongoose": "^7.3.1"
+    "method-override": "^3.0.0",
+    "mongoose": "^7.3.1",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
