--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
   },
   "homepage": "https://github.com/016886611529a/nodejs#readme",
   "dependencies": {
+    "axios": "^1.5.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
+    "firebase-admin": "^11.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.9.27",
     "mongoose-delete": "^0.5.2",
-    "mongoose-slug-generator": "^1.0.4"
+    "mongoose-slug-generator": "^1.0.4",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
