--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^5.9.27",
     "mongoose-delete": "^0.5.2",
     "mongoose-slug-generator": "^1.0.4",
+    "multer": "^1.4.5-lts.1",
     "socket.io": "^4.7.2"
   },
   "devDependencies": {
