--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "mongoose-delete": "^0.5.2",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.5-lts.1",
-    "socket.io": "^4.7.2"
+    "socket.io": "^4.7.2",
+    "tedious": "^16.6.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
