--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "mongoose": "^5.9.27",
     "mongoose-delete": "^0.5.2",
     "mongoose-slug-generator": "^1.0.4",
+    "msnodesqlv8": "^4.1.1",
+    "mssql": "^10.0.1",
     "multer": "^1.4.5-lts.1",
+    "sequelize": "^6.33.0",
     "socket.io": "^4.7.2",
     "tedious": "^16.6.0"
   },
