--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/016886611529a/nodejs#readme",
   "dependencies": {
+    "app-root-path": "^3.1.0",
     "axios": "^1.5.0",
     "express": "^4.18.2",
     "express-handlebars": "^7.0.7",
